latex preamble support added

--- a/example/example.ipynb
+++ b/example/example.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7c4c2c30",
+   "metadata": {
+    "tags": [
+     "latex-preamble"
+    ]
+   },
+   "source": [
+    "\\usepackage{amsmath}\n",
+    "\\usepackage{amsfonts}\n",
+    "\\usepackage{amssymb}\n",
+    "\\usepackage{xcolor}\n",
+    "\n",
+    "\\definecolor{ashBlack}{HTML}{111111}\n",
+    "\\definecolor{matrixGreen}{HTML}{03A062}\n",
+    "\\definecolor{matrixBlue}{HTML}{03A0C2}\n",
+    "\\definecolor{maizeCrayola}{HTML}{E8C547}\n",
+    "\\definecolor{blueGray}{HTML}{6290C3}\n",
+    "\\definecolor{ruby}{HTML}{D81E5B}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a1b2c3d4-0001-0001-0001-000000000001",
    "metadata": {},
    "source": [
@@ -40,13 +62,19 @@
     "\n",
     "Bayes' theorem:\n",
     "\n",
-    "$$P(A \\mid B) = \\frac{P(B \\mid A)\\, P(A)}{P(B)}$$\n",
+    "$$P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})}.$$\n",
     "\n",
     "A matrix equation:\n",
     "\n",
     "\\[\n",
-    "  \\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon}\n",
-    "\\]"
+    "  \\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon}.\n",
+    "\\]\n",
+    "\n",
+    "The Basel formula:\n",
+    "\n",
+    "$$\n",
+    "\\sum_{n=1}^{\\infty} \\frac{1}{n^2} = \\frac{\\pi^2}{6}.\n",
+    "$$"
    ]
   },
   {
