image added to example

--- a/example/notebook/example.ipynb
+++ b/example/notebook/example.ipynb
@@ -30,7 +30,11 @@
     "# From Jupyter to Substack\n",
     "\n",
     "This notebook demonstrates the `nb2wb` converter. It covers the three pillars\n",
-    "of technical writing: prose, mathematics, and code."
+    "of technical writing: prose, mathematics, and code.\n",
+    "\n",
+    "Here's a nice image for illustration.\n",
+    "\n",
+    "![The parallelogram rule](image.png)"
    ]
   },
   {
