--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -55,7 +55,44 @@
    "cell_type": "markdown",
    "id": "a1b2c3d4-0001-0001-0001-000000000003",
    "metadata": {},
-   "source": "## 2  Display Math → Image\n\nBlock equations are rendered to crisp PNG images.\n\nThe quadratic formula:\n\n$$x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a} \\label{eq:quadratic}$$\n\nEquation \\eqref{eq:quadratic} gives both roots of $ax^2 + bx + c = 0$ simultaneously.\n\nBayes' theorem:\n\n$$P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})}.$$\n\nA matrix equation:\n\n\\[\n  \\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon}.\n\\]\n\nThe Basel formula:\n\n$$\n\\sum_{n=1}^{\\infty} \\frac{1}{n^2} = \\frac{\\pi^2}{6}.\n$$"
+   "source": [
+    "## 2  Display Math → Image\n",
+    "\n",
+    "Block equations are rendered to crisp PNG images.\n",
+    "\n",
+    "The quadratic formula:\n",
+    "\n",
+    "$$x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a} \\label{eq:quadratic}$$\n",
+    "\n",
+    "Equation \\eqref{eq:quadratic} gives both roots of $ax^2 + bx + c = 0$ simultaneously.\n",
+    "\n",
+    "Bayes' theorem:\n",
+    "\n",
+    "$$P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})}.$$\n",
+    "\n",
+    "A matrix equation:\n",
+    "\n",
+    "\\[\n",
+    "  \\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon}.\n",
+    "\\]\n",
+    "\n",
+    "The Basel formula:\n",
+    "\n",
+    "$$\n",
+    "\\sum_{n=1}^{\\infty} \\frac{1}{n^2} = \\frac{\\pi^2}{6}.\n",
+    "$$\n",
+    "\n",
+    "The Gaussian integral, derived by switching to polar coordinates:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "I   &= \\int_{-\\infty}^{\\infty} e^{-x^2}\\,dx \\\\[4pt]\n",
+    "I^2 &= \\int_{-\\infty}^{\\infty}\\!\\int_{-\\infty}^{\\infty} e^{-(x^2+y^2)}\\,dx\\,dy \\\\[4pt]\n",
+    "    &= \\int_0^{2\\pi}\\!\\int_0^{\\infty} e^{-r^2}\\,r\\,dr\\,d\\theta \\\\[4pt]\n",
+    "    &= 2\\pi \\cdot \\Bigl[-\\tfrac{1}{2}e^{-r^2}\\Bigr]_0^{\\infty} \\\\[4pt]\n",
+    "    &= \\pi \\\\[4pt]\n",
+    "\\therefore\\quad I &= \\sqrt{\\pi}\n",
+    "\\end{align*}"
+   ]
   },
   {
    "cell_type": "markdown",
