LaTeX equation numbering (#4)

--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -62,22 +62,74 @@
     "\n",
     "The quadratic formula:\n",
     "\n",
-    "$$x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}$$\n",
+    "```latex\n",
+    "x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a} \\label{eq:quadratic}\n",
+    "```\n",
     "\n",
-    "Bayes' theorem:\n",
+    "is rendered to \n",
     "\n",
-    "$$P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})}.$$\n",
+    "$$x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a} \\label{eq:quadratic}$$\n",
+    "\n",
+    "You can render the equation references as `\\\\eqref{eq:quadratic}`, which renders like this: \\eqref{eq:quadratic} gives both roots of $ax^2 + bx + c = 0$ simultaneously.\n",
+    "\n",
+    "You can also use colors that are defined in the preamble. Bayes' theorem:\n",
+    "\n",
+    "```latex\n",
+    "P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})}\n",
+    "```\n",
+    "\n",
+    "is rendered to \n",
+    "\n",
+    "$$P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})}$$\n",
     "\n",
     "A matrix equation:\n",
     "\n",
+    "```latex\n",
+    "\\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon}\n",
+    "```\n",
+    "\n",
+    "is rendered to \n",
+    "\n",
     "\\[\n",
-    "  \\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon}.\n",
+    "  \\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon}\n",
     "\\]\n",
     "\n",
     "The Basel formula:\n",
     "\n",
+    "```latex\n",
+    "\\sum_{n=1}^{\\infty} \\frac{1}{n^2} = \\frac{\\pi^2}{6}\n",
+    "```\n",
+    "\n",
+    "is rendered to \n",
+    "\n",
     "$$\n",
-    "\\sum_{n=1}^{\\infty} \\frac{1}{n^2} = \\frac{\\pi^2}{6}.\n",
+    "\\sum_{n=1}^{\\infty} \\frac{1}{n^2} = \\frac{\\pi^2}{6}\n",
+    "$$\n",
+    "\n",
+    "Now, a complex multi-line example. The Gaussian integral, derived by switching to polar coordinates:\n",
+    "\n",
+    "```latex\n",
+    "\\begin{align*}\n",
+    "I   &= \\int_{-\\infty}^{\\infty} e^{-x^2}\\,dx \\\\[4pt]\n",
+    "I^2 &= \\int_{-\\infty}^{\\infty}\\!\\int_{-\\infty}^{\\infty} e^{-(x^2+y^2)}\\,dx\\,dy \\\\[4pt]\n",
+    "    &= \\int_0^{2\\pi}\\!\\int_0^{\\infty} e^{-r^2}\\,r\\,dr\\,d\\theta \\\\[4pt]\n",
+    "    &= 2\\pi \\cdot \\Bigl[-\\tfrac{1}{2}e^{-r^2}\\Bigr]_0^{\\infty} \\\\[4pt]\n",
+    "    &= \\pi \\\\[4pt]\n",
+    "\\therefore\\quad I &= \\sqrt{\\pi}\n",
+    "\\end{align*}\n",
+    "```\n",
+    "\n",
+    "is rendered to \n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "I   &= \\int_{-\\infty}^{\\infty} e^{-x^2}\\,dx \\\\[4pt]\n",
+    "I^2 &= \\int_{-\\infty}^{\\infty}\\!\\int_{-\\infty}^{\\infty} e^{-(x^2+y^2)}\\,dx\\,dy \\\\[4pt]\n",
+    "    &= \\int_0^{2\\pi}\\!\\int_0^{\\infty} e^{-r^2}\\,r\\,dr\\,d\\theta \\\\[4pt]\n",
+    "    &= 2\\pi \\cdot \\Bigl[-\\tfrac{1}{2}e^{-r^2}\\Bigr]_0^{\\infty} \\\\[4pt]\n",
+    "    &= \\pi \\\\[4pt]\n",
+    "\\therefore\\quad I &= \\sqrt{\\pi}\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
