ref to nb2wb added

--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -75,23 +75,23 @@
     "You can also use colors that are defined in the preamble. Bayes' theorem:\n",
     "\n",
     "```latex\n",
-    "P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})}\n",
+    "P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})} \\label{eq:bayes}\n",
     "```\n",
     "\n",
     "is rendered to \n",
     "\n",
-    "$$P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})}$$\n",
+    "$$P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})} \\label{eq:bayes}$$\n",
     "\n",
     "A matrix equation:\n",
     "\n",
     "```latex\n",
-    "\\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon}\n",
+    "\\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon} \\label{eq:mtx}\n",
     "```\n",
     "\n",
     "is rendered to \n",
     "\n",
     "\\[\n",
-    "  \\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon}\n",
+    "  \\mathbf{y} = \\mathbf{X}\\boldsymbol{\\beta} + \\boldsymbol{\\varepsilon} \\label{eq:mtx}\n",
     "\\]\n",
     "\n",
     "The Basel formula:\n",
