image converting issue fixed

--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -27,7 +27,7 @@
    "id": "a1b2c3d4-0001-0001-0001-000000000001",
    "metadata": {},
    "source": [
-    "# From Jupyter to Substack\n",
+    "# From Jupyter Notebook to Web\n",
     "\n",
     "This notebook demonstrates the `nb2wb` converter. It covers the three pillars\n",
     "of technical writing: prose, mathematics, and code.\n",
