--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -180,7 +180,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0,  1,  4,  9, 16, 25, 36, 49, 64, 81])"
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
       ]
      },
      "execution_count": 2,
@@ -189,10 +189,9 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "x = np.arange(10)\n",
-    "x ** 2"
+    "# Simple list comprehension\n",
+    "x = list(range(10))\n",
+    "[i ** 2 for i in x]"
    ]
   },
   {
@@ -221,20 +220,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "softmax([1.0, 2.0, 3.0]) = [0.09   0.2447 0.6652]\n"
+      "softmax([1.0, 2.0, 3.0]) = [0.0900 0.2447 0.6652]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "import math\n",
     "\n",
     "def softmax(z):\n",
-    "    e = np.exp(z - z.max())   # numerical stability\n",
-    "    return e / e.sum()\n",
+    "    \"\"\"Compute softmax values for a list of numbers.\"\"\"\n",
+    "    z_max = max(z)\n",
+    "    e = [math.exp(x - z_max) for x in z]  # numerical stability\n",
+    "    e_sum = sum(e)\n",
+    "    return [x / e_sum for x in e]\n",
     "\n",
-    "z = np.array([1.0, 2.0, 3.0])\n",
+    "z = [1.0, 2.0, 3.0]\n",
     "probs = softmax(z)\n",
-    "print(f\"softmax({z.tolist()}) = {np.array2string(probs, precision=4)}\")"
+    "print(f\"softmax({z}) = [{probs[0]:.4f} {probs[1]:.4f} {probs[2]:.4f}]\")"
    ]
   },
   {
@@ -271,8 +273,9 @@
     "    x_max = 20.1\n",
     "    fig = plt.figure(figsize=(19.2/2, 10.8/2))\n",
     "    \n",
-    "    X = np.linspace(-1, 1, 100)\n",
-    "    y = X**2\n",
+    "    # Generate points using list comprehension\n",
+    "    X = [x / 50.0 - 1 for x in range(101)]  # 101 points from -1 to 1\n",
+    "    y = [x**2 for x in X]\n",
     "    plt.plot(X, y, color=\"red\")\n",
     "\n",
     "    plt.tight_layout()\n",
