--- a/examples/x_article.ipynb
+++ b/examples/x_article.ipynb
@@ -67,7 +67,7 @@
         "\n",
         "$$P({\\color{maizeCrayola} A} \\mid {\\color{blueGray} B}) = \\frac{P({\\color{blueGray} B} \\mid {\\color{maizeCrayola} A})\\, P({\\color{maizeCrayola} A})}{P({\\color{blueGray} B})} \\label{eq:bayes}$$\n",
         "\n",
-        "Later in your article, you can reference the equation above with \\\\`\\label{eq:bayes}` that renders to \\label{eq:bayes} in the text.\n",
+        "Later in your article, you can reference the equation above with \\\\`\\label{eq:bayes}` that renders to \\eqref{eq:bayes} in the text.\n",
         "\n",
         "Multi-line LaTeX snippets are also supported:\n",
         "\n",
