--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -296,7 +296,8 @@
     "|---|---|\n",
     "| `hide-cell` | Entire cell omitted (input + output) |\n",
     "| `hide-input` | Source code hidden; output shown |\n",
-    "| `hide-output` | Output hidden; source code shown |"
+    "| `hide-output` | Output hidden; source code shown |\n",
+    "| `text-snippet` | Cell rendered as a text code snippet |"
    ]
   },
   {
@@ -361,6 +362,29 @@
     "import sys\n",
     "print(f\"Python {sys.version}\")\n",
     "print(\"(This output is hidden in the published post.)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d08b713c",
+   "metadata": {},
+   "source": [
+    "The next cell is tagged `text-snippet`: it is rendered as a HTML `<code>` snippet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d39ec92e",
+   "metadata": {
+    "tags": [
+     "text-snippet"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def square(x):\n",
+    "    return x**2"
    ]
   },
   {
